dist-iter/tests/compile_fail_tests/task_macro_wrong_args/map_chunk_mut_buffer_missing_chunk_size.stderr
error: no rules expected the token `|`
 --> tests/compile_fail_tests/task_macro_wrong_args/map_chunk_mut_buffer_missing_chunk_size.rs:6:41
  |
6 |         .dist_map_chunk(map_chunk_task!(|buf: &mut [i32]| {
  |                                         ^ no rules expected this token in macro call
  |
note: while trying to match `INPUT_CHUNK_SIZE`
 --> src/task.rs
  |
  |     (INPUT_CHUNK_SIZE = $IN:literal, OUTPUT_CHUNK_SIZE = $OUT:literal, |$closure_param:ident: impl Iterator<Item = $in:ty>| -> impl IntoI...
  |      ^^^^^^^^^^^^^^^^
